1）示例代码中，将接收到的byte[]数组转换成了string。转换过程中，由于string里面只识别ASCII字符串，导致0x80-0xFF的数据全部被转换成0x3F。更改编码格式，比如UTF8、UNICODE等等都无法解决。 2）经过不断测试，发现supersocket的session.send接口，是可以直接发送数据段的，并不是只能发送string。因此，byte[]数组不用转换成string。

--- a/AgpsServer/App.config
+++ b/AgpsServer/App.config
@@ -7,6 +7,7 @@
     <servers>
       <server name="AgpsServer"
               serverType="AgpsServer.TelnetServer, AgpsServer"
+              textEncoding="UTF-8"
               ip="Any"
               port="2012">
         </server>
