增加了服务器的配置，配置session ilde时间等。

--- a/AgpsServer/App.config
+++ b/AgpsServer/App.config
@@ -9,8 +9,13 @@
               serverType="AgpsServer.TelnetServer, AgpsServer"
               textEncoding="UTF-8"
               ip="Any"
-              port="46434">
-        </server>
+              port="46434"
+              maxConnectionNumber="10000"
+              logAllSocketException="true"
+              clearIdleSession="true"
+              clearIdleSessionInterval="60"
+              idleSessionTimeOut="60">
+      </server>
         <server name="AgpsServerB"
               serverType="AgpsServer.TelnetServer, AgpsServer"
               ip="Any"
