--- a/AgpsServer/App.config
+++ b/AgpsServer/App.config
@@ -17,7 +17,7 @@
               idleSessionTimeOut="60">
       </server>
         <server name="AgpsServerB"
-              serverType="AgpsServer.TelnetServer, AgpsServer"
+              serverType="AgpsServer.MyServer, AgpsServer"
               ip="Any"
               port="2011">
       </server>
