--- a/AgpsServer/packages.config
+++ b/AgpsServer/packages.config
@@ -3,4 +3,9 @@
   <package id="log4net" version="2.0.3" targetFramework="net452" />
   <package id="SuperSocket" version="1.6.6.1" targetFramework="net452" />
   <package id="SuperSocket.Engine" version="1.6.6.1" targetFramework="net452" />
+  <package id="System.IO" version="4.3.0" targetFramework="net452" />
+  <package id="System.Linq" version="4.3.0" targetFramework="net452" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net452" />
+  <package id="System.Text.Encoding" version="4.3.0" targetFramework="net452" />
+  <package id="System.Threading" version="4.3.0" targetFramework="net452" />
 </packages>
