1）添加APPKEY命令； 2）修改配置文件；

--- a/AgpsServer/AgpsServer.csproj
+++ b/AgpsServer/AgpsServer.csproj
@@ -72,6 +72,7 @@
     <Compile Include="AgpsClient.cs" />
     <Compile Include="AgpsReceiveFilter.cs" />
     <Compile Include="AgpsRequsetInfo.cs" />
+    <Compile Include="command\APPKEY.cs" />
     <Compile Include="MyFixedHeaderReceiveFilter.cs" />
     <Compile Include="MyFixedHeaderReceiveProtocolServer.cs" />
     <Compile Include="MyFixedHeaderReceiveProtocolSession.cs" />
