--- a/AgpsServer/App.config
+++ b/AgpsServer/App.config
@@ -6,7 +6,7 @@
   <superSocket>
     <servers>
       <server name="AgpsServer"
-              serverType="AgpsServer.TelnetServer, AgpsServer"
+              serverType="AgpsServer.MyServer, AgpsServer"
               textEncoding="UTF-8"
               ip="Any"
               port="46434"
@@ -19,7 +19,12 @@
         <server name="AgpsServerB"
               serverType="AgpsServer.MyServer, AgpsServer"
               ip="Any"
-              port="2011">
+              port="2011"              
+              maxConnectionNumber="10000"
+              logAllSocketException="true"
+              clearIdleSession="true"
+              clearIdleSessionInterval="60"
+              idleSessionTimeOut="60">
       </server>
     </servers>
   </superSocket>
