--- a/AgpsServer/Config/log4net.config
+++ b/AgpsServer/Config/log4net.config
@@ -63,7 +63,7 @@
     <root>
         <level value="ALL" />
         <appender-ref ref="errorAppender" />
-        <appender-ref ref="infoAppender" />
+        <!--info<appender-ref ref="infoAppender" />-->
         <appender-ref ref="debugAppender" />
     </root>
     <logger name="Performance" additivity="false">
