--- a/AgpsServer/Config/log4net.config
+++ b/AgpsServer/Config/log4net.config
@@ -62,7 +62,7 @@
     </appender>
     <root>
         <level value="ALL" />
-        <appender-ref ref="errorAppender" />
+        <!--err<appender-ref ref="errorAppender" />-->
         <!--info<appender-ref ref="infoAppender" />-->
         <appender-ref ref="debugAppender" />
     </root>
